Fix scrollbar

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -185,8 +185,8 @@ header {
   }
 
   .mathcell {
-  	width: 100%;
-  	overflow-x: scroll;
+  	// scroll long equations
+  	overflow: auto;
   }
 
   h1, h2, h3, h4, h5 {
